tests/baselines/reference/thisInModule.errors.txt
tests/cases/compiler/thisInModule.ts(3,5): error TS2331: 'this' cannot be referenced in a module body.


==== tests/cases/compiler/thisInModule.ts (1 errors) ====
    module myMod {
        var x;
        this.x = 5;
        ~~~~
!!! error TS2331: 'this' cannot be referenced in a module body.
    }